fix readmore button  on tablet

--- a/client/src/components/css/ShowArticles.css
+++ b/client/src/components/css/ShowArticles.css
@@ -694,3 +694,58 @@ hr {
 		top: 0px;
 	}
 }
+
+
+
+/* portrait  tablet */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+	.MuiGrid-item h6 {
+		position: relative;
+		top: 48px;
+	}
+
+	.badges {
+		position: relative;
+		top: -13px;
+		left: -9em;
+	}
+
+	.linkz {
+		top: -9px;
+		left: 5em;
+	}
+
+	.MuiButton-textSizeSmall {
+		position: relative;
+		top: -27px;
+	}
+}
+
+
+
+/* Landscape tablet */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+
+	.MuiCardActions-spacing> :not(:first-child) {
+		position: relative;
+		top: -16px;
+	}
+
+	.MuiButton-textSizeSmall {
+		position: relative;
+		top: -27px;
+	}
+
+
+	.linkz {
+		top: -9px;
+		left: 10em;
+	}
+
+	.badges {
+		position: relative;
+		top: -13px;
+		left: -4em;
+	}
+
+}
